--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,10 +29,16 @@
     box-sizing: border-box;
 }
 
+button{
+    display: none;
+}
 body{
     background-color: #fff;
     width: 100%;
     height: 100%;
+}
+input {
+    display: none;
 }
     header{
          position: absolute;
@@ -78,7 +84,7 @@ body{
     
 .hero{
     color: #fff;
-    background-image: url('../assets/background.jpg');
+    background-image: url('../assets/img/background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -87,8 +93,9 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: inherit;
-    padding-top: 300px;
+    padding-top: 240px;
     align-items: center;
+}
     .hero__item{
         position: absolute;
         bottom: 100px;
@@ -98,7 +105,7 @@ body{
         .item{
             margin-left: 100px;
             margin-right: 100px;
-                max-width: 500px;
+                max-width: 550px;
                 .item__title{
                     font-family: 'Gilroy EB';
                 }
@@ -108,12 +115,13 @@ body{
         }
     }
 
-        .hero__title{
+        .hero__subtext{
             .hero__title.jap{
-            text-align: right;
-            font-family: 'Gilroy EB';
-            font-size: 20px;     
-            font-weight: 800;   
+                text-align: right;
+                font-family: 'Gilroy EB';
+                font-size: 30px;
+                font-weight: 800;
+            }
         }
             h1{
                 display: inline-block;
@@ -141,29 +149,29 @@ body{
 
                 }
             }
-        }
-    }
     .hero__text{
         display: flex;
         justify-content: space-between;
         align-items: center;
         position: relative;
         .hero__country{
-            font-size: 70px;
+            font-size: 80px;
             font-style: italic;
             font-family: 'Barbershop';
             position: absolute;
             top: -10px;
         }
         .hero__info{
+            font-size: 31px;
             position: absolute;
-            top: 0;
-            left: 130px;
-            letter-spacing: 7.5px;
+            top: -10px;
+            left: 129px;
+            letter-spacing: 6.5px;
             text-transform: uppercase;
             font-family: 'Gilroy EB';
         }
     }
+
 
 @media only screen and (max-width: 1400px){
     .hero{
@@ -178,11 +186,18 @@ body{
             }
         }
     }
-    @media only screen and (max-width: 1000px){
+    @media only screen and (max-width: 1100px){
         .hero{
             display: flex;
             justify-content: inherit;
             padding-top: 200px;
+            .hero__subtext{
+                .hero__title.jap{
+                    text-align: right;
+                    font-family: 'Gilroy EB';
+                    font-size: 20px;
+                    font-weight: 800;
+                }            
                 .hero__title{
                         h1{
                         font-size: 110px;
@@ -203,6 +218,29 @@ body{
                         }
                     }
                 }
+                    .hero__text{
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        position: relative;
+                    .hero__country{
+                        font-size: 75px;
+                        font-style: italic;
+                        font-family: 'Barbershop';
+                        position: absolute;
+                        top: -5px;
+                        }
+                    .hero__info{
+                        font-size: 21px;
+                        position: absolute;
+                        top: 2px;
+                        left: 129px;
+                        letter-spacing: 6.5px;
+                        text-transform: uppercase;
+                        font-family: 'Gilroy EB';
+                        }
+                    }
+            }
             .hero__item{
                 display: flex;
                 flex-direction: row;
@@ -252,7 +290,8 @@ body{
         }
     }
     .hero{
-        .hero__title{
+        .hero__subtext{
+            .hero__title{
                 h1{
                 font-size: 80px;
                 span{
@@ -268,6 +307,68 @@ body{
                         -webkit-border-radius: 50%;
                         border-radius: 50%;
                         background-color: #ff0000;
+                    }
+                }
+            }
+        }
+        .hero__text{           
+            .hero__country{
+                font-size: 50px;
+                font-style: italic;
+                font-family: 'Barbershop';
+                position: absolute;
+                top: -10px;  
+            }
+            .hero__info{
+                position: absolute;
+                top: -5px;
+                left: 94px;
+                letter-spacing: 5.5px;
+                text-transform: uppercase;
+                font-family: 'Gilroy EB';
+                font-size: 15px;
+                }
+            }
+        }
+    }
+}
+@media only screen and (max-width: 500px){
+    header{
+        padding: 15px;
+    }
+
+    header{
+        nav{
+            display: flex;
+            align-items: center;
+                    ul{ 
+                        li{
+                            a{
+                            padding: 0 5px;
+                            }
+                        }
+                    }
+             }
+    }
+    .hero{
+        .hero__subtext{
+            .hero__title{
+                h1{
+                font-size: 65px;
+                span{
+                    &::before{
+                        content: '';
+                        display: inline-block;
+                        width: 30px;
+                        height: 30px;
+                        position: absolute;
+                        bottom: 26px;
+                        left: 10px;
+                        -moz-border-radius: 50%;
+                        -webkit-border-radius: 50%;
+                        border-radius: 50%;
+                        background-color: #ff0000;
+                    
                     }
                 }
             }
@@ -278,47 +379,38 @@ body{
                 font-style: italic;
                 font-family: 'Barbershop';
                 position: absolute;
-                top: -10px;  
+                top: -5px;
             }
             .hero__info{
                 position: absolute;
                 top: 0;
-                left: 110px;
-                letter-spacing: 5.5px;
+                left: 77px;
+                letter-spacing: 3.5px;
                 text-transform: uppercase;
                 font-family: 'Gilroy EB';
                 font-size: 15px;
-            }
-        }
-    }
-}
-@media only screen and (max-width: 500px){
-    .hero{
-        .hero__title{
-                h1{
-                font-size: 65px;
-            }
-        }
-    }
-    header{
-        nav{
             
+            }
+        }
         }
 
     }
+}
+@media only screen and (max-width: 450px){
     .hero{
+        .hero__subtext{
         .hero__title{
                 h1{
-                font-size: 80px;
+                    font-size: 55px;
                 span{
                     &::before{
                         content: '';
                         display: inline-block;
-                        width: 35px;
-                        height: 35px;
+                        width: 25px;
+                        height: 25px;
                         position: absolute;
-                        bottom: 33px;
-                        left: 14px;
+                        bottom: 22px;
+                        left: 9.5px;
                         -moz-border-radius: 50%;
                         -webkit-border-radius: 50%;
                         border-radius: 50%;
@@ -327,18 +419,81 @@ body{
                 }
             }
         }
-    }
-    .closeText{
-        display: none;
-      }
-      .showClose {
-        background-image: url("https://ljc-dev.github.io/testing0/ham-close.svg");
-        svg{
-          display: none;
+            .hero__item{
+                    .item{
+                        max-width: 350px;
+                        margin: 10px;
+                }
+            }
+        .hero__text{
+            .hero__country{
+                font-size: 40px;
+                font-style: italic;
+                font-family: 'Barbershop';
+                position: absolute;
+                top: -5px;
+            }
+            .hero__info{
+                position: absolute;
+                top: 0;
+                left: 77px;
+                letter-spacing: 1.5px;
+                text-transform: uppercase;
+                font-family: 'Gilroy EB';
+                font-size: 15px;
+            }
         }
-      }
-      .showNav {
-        /* show the menu */
-        transform: translateY(0); 
-      }
+    }
+}
+}
+@media only screen and (max-width: 420px){
+    header{
+        display: flex;
+        justify-content: center;
+        align-self: middle;
+        flex-direction: column;
+        }
+        .hero{
+            padding-top: 140px;
+            .hero__subtext{
+                .hero__title{
+                    h1{
+                    font-size: 40px;
+                    span{
+                        &::before{
+                            content: '';
+                            display: inline-block;
+                            width: 17px;
+                            height: 17px;
+                            position: absolute;
+                            bottom: 17px;
+                            left: 8px;
+                            -moz-border-radius: 50%;
+                            -webkit-border-radius: 50%;
+                            border-radius: 50%;
+                            background-color: #ff0000;
+                        }
+                    }
+                }
+            }
+            .hero__text{           
+                .hero__country{
+                    font-size: 0px;
+                    font-style: italic;
+                    font-family: 'Barbershop';
+                    position: absolute;
+                    top: 5px;
+                }
+                .hero__info{
+                    position: absolute;
+                    top: -5px;
+                    left: 11px;
+                    letter-spacing: 1px;
+                    text-transform: uppercase;
+                    font-family: 'Gilroy EB';
+                    font-size: 15px;
+                    }
+                }
+            }
+        }
     }
