--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -84,7 +84,7 @@ input {
     
 .hero{
     color: #fff;
-    background-image: url(../assets/img/background.jpg);
+    background-image: url('../assets/img/background.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
